TP Completo menos conclusiones

--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -6,76 +6,13 @@
    "source": [
     "#CEIA - IIA - Trabajo Practico 1 - Torres de Hanoi\n",
     "\n",
-    "##Grupo X - \n",
+    "##Grupo 1 - \n",
     "### Miembros:\n",
-    "  - Martin Brocca"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "source": [
-    "1. ¿Cuáles son los PEAS de este problema? (Performance, Environment, Actuators, Sensors)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. ¿Cuáles son las propiedades del entorno de trabajo?\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3. En el contexto de este problema, establezca cuáles son los: estado, espacio de estados, árbol de búsqueda, \n",
-    "nodo de búsqueda, objetivo, acción y frontera.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "4. Implemente algún método de búsqueda. Puedes elegir cualquiera menos búsqueda en anchura primero (el desarrollado \n",
-    "en clase). Sos libre de elegir cualquiera de los vistos en clases, o inclusive buscar nuevos.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "5. ¿Qué complejidad en tiempo y memoria tiene el algoritmo elegido? \n",
-    "   En el caso de la busqueda en profundidad con las restricciones adicionales de no mover la pieza anterior, se tiene una complejidad estimada del O(n3^n)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "source": [
-    "6. A nivel implementación, ¿qué tiempo y memoria ocupa el algoritmo? (Se recomienda correr 10 veces y calcular \n",
-    "promedio y desvío estándar de las métricas).\n",
-    "Los resultados de la ejecución y de su medición por medio de los comandos %%memit y %%timeit se pueden observar en:\n",
-    "-  [resultados primero en anchura](#hanoi-bfs-results)\n",
-    "-  [resultados primero en profundidad](#hanoi-dfs-results)\n",
-    "-  [resultados primero en profundidad sin repetir pieza](#hanoi-dfsmart-results)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "7. Si la solución óptima es $2^k - 1$ movimientos con *k* igual al número de discos. Qué tan lejos está la solución \n",
-    "del algoritmo implementado de esta solución óptima (se recomienda correr al menos 10 veces y usar el promedio de \n",
-    "trayecto usado). "
+    "- Martin Brocca <martinbrocca@gmail.com>\n",
+    "- Emiliano Iparraguirre <emiliano.iparraguirre22@gmail.com>\n",
+    "- Natalia Espector <nataliaespector@gmail.com>\n",
+    "- Agustin Lopez Fredes <agustin.lopezfredes@gmail.com>\n",
+    "- Fernando Martinez <fgmartinez1989@gmail.com>"
    ]
   },
   {
@@ -103,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +48,7 @@
     "\n",
     "def breadth_first_search(number_disks=5):\n",
     "    # Inicializamos el problema\n",
-    "    list_disks = [i for i in range(5, 0, -1)]\n",
+    "    list_disks = [i for i in range(number_disks, 0, -1)]\n",
     "    initial_state = StatesHanoi(list_disks, [], [], max_disks=number_disks)\n",
     "    goal_state = StatesHanoi([], [], list_disks, max_disks=number_disks)\n",
     "    problem = ProblemHanoi(initial=initial_state, goal=goal_state)\n",
@@ -179,7 +116,7 @@
     "\n",
     "def depth_first_search(number_disks=5):\n",
     "    # Inicializamos el problema\n",
-    "    list_disks = [i for i in range(5, 0, -1)]\n",
+    "    list_disks = [i for i in range(number_disks, 0, -1)]\n",
     "    initial_state = StatesHanoi(list_disks, [], [], max_disks=number_disks)\n",
     "    goal_state = StatesHanoi([], [], list_disks, max_disks=number_disks)\n",
     "    problem = ProblemHanoi(initial=initial_state, goal=goal_state)\n",
@@ -913,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
