--- a/TP1/tp1.ipynb
+++ b/TP1/tp1.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,8 +281,15 @@
     "def heuristica(state, goal_state):\n",
     "    # Contar cuántos discos aún no están en las torres destino (rods[1] y rods[2])\n",
     "    goal_disks = set(goal_state.rods[1] + goal_state.rods[2])\n",
-    "    return sum(1 for rod in state.rods[:2] for disk in rod if disk not in goal_disks)\n",
-    "\n",
+    "    return sum(1 for rod in state.rods[:2] for disk in rod if disk not in goal_disks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def busqueda_greedy(number_disks=5):\n",
     "    list_disks = [i for i in range(number_disks, 0, -1)]\n",
     "    initial_state = StatesHanoi(list_disks, [], [], max_disks=number_disks)\n",
@@ -325,18 +332,7 @@
     "        \"max_depth\": node.depth,\n",
     "        \"cost_total\": None,\n",
     "    }\n",
-    "    return None, metrics\n",
-    "\n",
-    "#solution_greedy, metrics_greedy = busqueda_greedy(number_disks=5)\n",
-    "\n",
-    "#print('Métricas:\\n')\n",
-    "#for key, value in metrics_greedy.items():\n",
-    " #   print(f\"{key}: {value}\")\n",
-    "\n",
-    "#print('\\n\\nCamino a la solución:\\n')\n",
-    "#if solution_greedy:\n",
-    " #   for node in solution_greedy.path():\n",
-    "  #      print(node)"
+    "    return None, metrics"
    ]
   },
   {
@@ -348,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1137,9 +1133,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Move disk 1 from 1 to 3\n",
+      "Move disk 2 from 1 to 2\n",
+      "Move disk 1 from 3 to 2\n",
+      "Move disk 3 from 1 to 3\n",
+      "Move disk 1 from 2 to 1\n",
+      "Move disk 2 from 2 to 3\n",
+      "Move disk 1 from 1 to 3\n",
+      "Move disk 4 from 1 to 2\n",
+      "Move disk 1 from 3 to 2\n",
+      "Move disk 2 from 3 to 1\n",
+      "Move disk 1 from 2 to 1\n",
+      "Move disk 3 from 3 to 2\n",
+      "Move disk 1 from 1 to 3\n",
+      "Move disk 2 from 1 to 2\n",
+      "Move disk 1 from 3 to 2\n",
+      "Move disk 5 from 1 to 3\n",
+      "Move disk 1 from 2 to 1\n",
+      "Move disk 2 from 2 to 3\n",
+      "Move disk 1 from 1 to 3\n",
+      "Move disk 3 from 2 to 1\n",
+      "Move disk 1 from 3 to 2\n",
+      "Move disk 2 from 3 to 1\n",
+      "Move disk 1 from 2 to 1\n",
+      "Move disk 4 from 2 to 3\n",
+      "Move disk 1 from 1 to 3\n",
+      "Move disk 2 from 1 to 2\n",
+      "Move disk 1 from 3 to 2\n",
+      "Move disk 3 from 1 to 3\n",
+      "Move disk 1 from 2 to 1\n",
+      "Move disk 2 from 2 to 3\n",
+      "Move disk 1 from 1 to 3\n"
+     ]
+    }
+   ],
    "source": [
     "for act in solution_greedy.solution():\n",
     "    print(act)"
@@ -1147,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,14 +1301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37.5 ms ± 86.6 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "37.5 ms ± 170 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1285,14 +1319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 83.78 MiB, increment: 2.77 MiB\n"
+      "peak memory: 74.81 MiB, increment: 0.92 MiB\n"
      ]
     }
    ],
@@ -1310,14 +1344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37.9 ms ± 443 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "38.6 ms ± 372 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1328,14 +1362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 71.27 MiB, increment: 0.88 MiB\n"
+      "peak memory: 74.83 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
@@ -1361,14 +1395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.32 ms ± 87.3 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "2.34 ms ± 99.3 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -1379,14 +1413,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 71.27 MiB, increment: 0.00 MiB\n"
+      "peak memory: 74.86 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
@@ -1404,14 +1438,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.25 ms ± 16.2 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "2.29 ms ± 28.8 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -1422,14 +1456,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 71.28 MiB, increment: 0.00 MiB\n"
+      "peak memory: 74.86 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
@@ -1447,14 +1481,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.26 ms ± 19.7 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "2.25 ms ± 15.8 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -1465,14 +1499,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 71.39 MiB, increment: 0.00 MiB\n"
+      "peak memory: 74.86 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
@@ -1491,32 +1525,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Breadth first search:\n",
-    "solution.generate_solution_for_simulator()"
+    "#Breadth:\n",
+    "solution_anchura.generate_solution_for_simulator(\"./sequence_breadth.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Depth first search:\n",
-    "solution_prof.generate_solution_for_simulator()"
+    "#Depth:\n",
+    "solution_prof.generate_solution_for_simulator(\"./sequence_depth.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Depth_Smart first search:\n",
-    "solution_prof_smart.generate_solution_for_simulator()"
+    "#Depth_Smart:\n",
+    "solution_prof_smart.generate_solution_for_simulator(\"./sequence_depth_optimized.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Gredy:\n",
+    "solution_greedy.generate_solution_for_simulator(\"./sequence_greedy.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#A*:\n",
+    "solution_a_estrella.generate_solution_for_simulator(\"./sequence_a_star.json\")"
    ]
   }
  ],
