Actualizar README y gráficos - pendiente punto 6

--- a/TP2/tp2.ipynb
+++ b/TP2/tp2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0ebab7ea",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "003f6249",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4ce603c6",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "82b1b9ff",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "eeb7b941",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "4    -122.25  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fd63017f",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        "Name: MedHouseVal, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a54f4e4c",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "4    -122.25        3.422  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "dd56f6ac",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
        "max     1243.333333     41.950000   -114.310000      5.000010  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2d25d99d",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "3709fa71",
    "metadata": {},
    "outputs": [
@@ -789,7 +789,7 @@
        "MedHouseVal -0.144160  -0.045967     1.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ae93cc6c",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b7b7f77d",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1011,7 @@
        "max     1243.333333     41.950000   -114.310000      5.000010  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "0486a333",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "923c1bf7",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "aec8c6a4",
    "metadata": {},
    "outputs": [
@@ -1581,7 +1581,7 @@
        "                ('regressor', LinearRegression())])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "8ed59a21",
    "metadata": {},
    "outputs": [
@@ -2029,7 +2029,7 @@
        "                ('regressor', LinearRegression())])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2041,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "1110cd94",
    "metadata": {},
    "outputs": [
@@ -2074,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "ae2dd40e",
    "metadata": {},
    "outputs": [
@@ -2083,7 +2083,7 @@
      "output_type": "stream",
      "text": [
       "La varianza total del conjunto de entrenamiento es 19355.92748251429\n",
-      "La varianza total explicada por el modelo es 11794.456461225036\n",
+      "La varianza total explicada por el modelo es 11794.456461225038\n",
       "El R2 es 0.6093\n"
      ]
     }
@@ -2116,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "4280067f",
    "metadata": {},
    "outputs": [
@@ -2163,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "id": "4af03be5",
    "metadata": {},
    "outputs": [
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "aa22f929",
    "metadata": {},
    "outputs": [
@@ -2261,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "60237bb2",
    "metadata": {},
    "outputs": [
@@ -2324,6 +2324,7 @@
     "plt.ylabel('Valor del coeficiente')\n",
     "plt.title('Evolución de los coeficientes de Ridge')\n",
     "plt.legend()\n",
+    "plt.savefig(\"results/coeficientes_ridge.png\")\n",
     "plt.show()\n",
     "\n",
     "\n"
@@ -2331,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "8b4cdd88",
    "metadata": {},
    "outputs": [
@@ -2371,6 +2372,9 @@
     "best_alpha = alpha_values[np.argmin(mse_scores)]\n",
     "print(f\"Mejor alpha: {best_alpha:.2f}, MSE: {min(mse_scores):.4f}\")\n",
     "\n",
+    "# Crear modelo Ridge con el mejor alpha\n",
+    "ridge_best = Ridge(alpha=best_alpha)\n",
+    "\n",
     "# Graficamos MSE vs. alpha\n",
     "plt.figure(figsize=(8, 5))\n",
     "plt.plot(alpha_values, mse_scores, marker='o', color='b')\n",
@@ -2385,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "b31c25b4",
    "metadata": {},
    "outputs": [
@@ -2813,7 +2817,7 @@
        "Ridge(alpha=np.float64(6.63265306122449))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2834,7 +2838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "id": "3cbfde7f",
    "metadata": {},
    "outputs": [
@@ -2844,7 +2848,7 @@
      "text": [
       "R-cuadrado en test: 0.596\n",
       "Error absoluto medio: 0.527\n",
-      "Error cuadrático medio: 0.53\n",
+      "Error cuadrático medio: 0.531\n",
       "Raíz de error cuadrático medio: 0.728\n",
       "Error absoluto porcentual medio: 31.75%\n"
      ]
@@ -2868,7 +2872,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
+   "id": "7eed7125",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-cuadrado en test: 0.596\n",
+      "Error absoluto medio: 0.527\n",
+      "Error cuadrático medio: 0.53\n",
+      "Raíz de error cuadrático medio: 0.728\n",
+      "Error absoluto porcentual medio: 31.75%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#modelo de ridge\n",
+    "\n",
+    "print(\"R-cuadrado en test:\", round(r2_ridge, 3))\n",
+    "print(\"Error absoluto medio:\", round(mae_ridge, 3))\n",
+    "print(\"Error cuadrático medio:\", round(mse_ridge, 3))\n",
+    "print(\"Raíz de error cuadrático medio:\", round(rmse_ridge, 3))\n",
+    "print(f\"Error absoluto porcentual medio: {mape_ridge*100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "fecab98b",
    "metadata": {},
    "outputs": [
@@ -2877,10 +2909,10 @@
      "output_type": "stream",
      "text": [
       "Diferencia entre el modelo de regresion lineal y ridge:\n",
-      "R-cuadrado en test: 0.0\n",
-      "Error absoluto medio: 0.0\n",
-      "Error cuadrático medio: 0.0\n",
-      "Raíz de error cuadrático medio: 0.0\n",
+      "R-cuadrado en test: -0.00011760379402203647\n",
+      "Error absoluto medio: 2.5949166068239826e-05\n",
+      "Error cuadrático medio: 0.00015435969648502912\n",
+      "Raíz de error cuadrático medio: 0.00010596564206466486\n",
       "Error absoluto porcentual medio: 0.00%\n"
      ]
     }
@@ -2897,7 +2929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "bcd8dfce",
    "metadata": {},
    "outputs": [
@@ -2938,17 +2970,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "f393ae05",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<branca.element.Element at 0x26bca2544d0>"
+       "<branca.element.Element at 0x1a5708a4a70>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2975,7 +3007,7 @@
     "        return 'green'\n",
     "\n",
     "# Añadimos puntos al mapa con colores según el valor\n",
-    "for lat, lon, value in zip(df['Latitude'], df['Longitude'], df['MedHouseVal']):\n",
+    "for lat, lon, value in zip(df_california['Latitude'], df_california['Longitude'], df_california['MedHouseVal']):\n",
     "    # Convertimos a float y manejamos NaN\n",
     "    if pd.isna(lat) or pd.isna(lon) or pd.isna(value):\n",
     "        continue  # Saltamos filas con valores nulos\n",
@@ -3013,9 +3045,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (CEIA)",
+   "display_name": "Python (TP2 California Housing)",
    "language": "python",
-   "name": "ceia-analisis-de-datos"
+   "name": "tp2-californiahousing"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3027,7 +3059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
