Corregir y guardar imagen mse_vs_alpha

--- a/TP2/tp2.ipynb
+++ b/TP2/tp2.ipynb
@@ -2163,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "4af03be5",
    "metadata": {},
    "outputs": [
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "aa22f929",
    "metadata": {},
    "outputs": [
@@ -2332,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "id": "8b4cdd88",
    "metadata": {},
    "outputs": [
@@ -2383,6 +2383,7 @@
     "plt.title('MSE vs. Alpha para Regresión Ridge')\n",
     "plt.axvline(x=best_alpha, color='r', linestyle='--', label=f'Mejor alpha = {best_alpha:.2f}')\n",
     "plt.legend()\n",
+    "plt.savefig(\"results/mse_vs_alpha.png\")\n",
     "plt.show()\n",
     "\n"
    ]
@@ -2838,7 +2839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "3cbfde7f",
    "metadata": {},
    "outputs": [
@@ -2872,7 +2873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "7eed7125",
    "metadata": {},
    "outputs": [
@@ -2900,7 +2901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "id": "fecab98b",
    "metadata": {},
    "outputs": [
@@ -2929,7 +2930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "bcd8dfce",
    "metadata": {},
    "outputs": [
@@ -3045,9 +3046,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (TP2 California Housing)",
+   "display_name": "Python (TP1 Hanoi)",
    "language": "python",
-   "name": "tp2-californiahousing"
+   "name": "tp1-hanoi"
   },
   "language_info": {
    "codemirror_mode": {
