Agregegue comentarios y conclusiones

--- a/TP3/tp3.ipynb
+++ b/TP3/tp3.ipynb
@@ -787,6 +787,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c7ee60dc",
+   "metadata": {},
+   "source": [
+    " \n",
+    " La tabla a continuación muestra las 10 palabras mas comunes para correos SPAM y no SPAM\n",
+    " Top 10 de palabras en correos no SPAM (spam=0):\n",
+    " \n",
+    "  | Rank | Non-Spam Word | Non-Spam Frequency | Spam Word | Spam Frequency |\n",
+    "  |------|-----------|----------------|----------------|---------------------|\n",
+    "  | 1    | **you**       | 3,541,702      | **you**            | 4,105,599           |\n",
+    "  | 2    | george    | 3,527,559      | **your**           | 2,502,597           |\n",
+    "  | 3    | hp        | 2,496,576      | **will**           |   997,100           |\n",
+    "  | 4    | **will**      | 1,495,268      | free           |   939,790           |\n",
+    "  | 5    | **your**      | 1,223,098      | our            |   931,799           |\n",
+    "  | 6    | hpl       | 1,204,398      | all            |   732,080           |\n",
+    "  | 7    | re        | 1,159,138      | mail           |   635,470           |\n",
+    "  | 8    | edu       |   800,669      | email          |   578,759           |\n",
+    "  | 9    | address   |   681,569      | business       |   521,250           |\n",
+    "  | 10   | meeting   |   604,460      | remove         |   499,309           |\n",
+    "\n",
+    "  Se observa que la palabra $you$ es la primera en las dos categorías y que $your$ y $will$ estan presentes en ambos lados de la tabla. \n",
+    "  Es notable que en los correos de tipo SPAM, la frecuencia de la palabra $free$, como la del sigo de exclamación $!$ , $money$ se tienen una frecuencia mucho mayor que en correos no-SPAM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "50a1ae6a",
    "metadata": {},
    "source": [
@@ -4107,6 +4133,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "78ab1223",
+   "metadata": {},
+   "source": [
+    "**Análisis**:\n",
+    " - El modelo Naive Bayes comete más falsos negativos (137), es decir, clasifica muchos correos SPAM como no-SPAM.\n",
+    " - En cambio, Regresión Logística tiene menos falsos negativos (75), aunque un poco más de falsos positivos (33 vs 24).\n",
+    "**Importancia de este tipo de error**:\n",
+    " - El problema de clasificación de correos de tipo SPAM tiene diferentes puntos de vista que pueden determinar que algoritmo es el mejor:\n",
+    "     - En ambientes coorporativos, en donde la seguridad es la prioridad en la clasificación por sobre la conveniencia del usuario, los falsos negativos presentan un mayor costo al permitir que correo no deseado llegue a la bandeja de entrada. Esto incrementa el riesgo y peligro para toda la compañia. En este caso, el modelo de Regresión Logística resulta más adecuado.\n",
+    "     - En ambientes de usuarios finales, en donde el riesgo es solo para el individuo, los falsos positivos, es decir correo legítimo identificado como SPAM, es menos deseable. En este caso Naive Bayes es preferible. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a5c4b9e7",
    "metadata": {},
    "source": [
@@ -4172,6 +4212,29 @@
     "print(\"\\nLogistic Regression:\")\n",
     "print(f\"Precision: {precision_lr:.4f}\")\n",
     "print(f\"Recall: {recall_lr:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08fc07a3",
+   "metadata": {},
+   "source": [
+    "Precisión (Precision) mide cuántos de los correos marcados como SPAM realmente lo eran. Es sensible a falsos positivos.\n",
+    "\n",
+    "Recuperación (Recall) mide cuántos de los correos SPAM fueron detectados correctamente. Es sensible a falsos negativos.\n",
+    "\n",
+    "Estimación cualitativa:\n",
+    "\n",
+    "|Métrica\t| Naive Bayes\t| Regresión Logística| \n",
+    "|-----------|---------------|--------------------|\n",
+    "|Precisión\t|Alta (pocos falsos positivos)|\tLevemente menor|\n",
+    "|Recall\t|Más baja (muchos falsos negativos) |\tMejor|\n",
+    "\n",
+    "En conclusión: \n",
+    "\n",
+    "Naive Bayes tiene mejor precisión.\n",
+    "\n",
+    "Regresión Logística tiene mejor recall, lo cual es más valioso en este contexto."
    ]
   },
   {
@@ -4245,6 +4308,25 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07c3af3a",
+   "metadata": {},
+   "source": [
+    "Conclusiones generales del trabajo:\n",
+    "\n",
+    "\n",
+    "1. Ambos modelos son válidos para el problema de clasificación de SPAM, pero muestran distintos comportamientos frente a los errores.\n",
+    "\n",
+    "2. En ambientes coorporativos y de alta seguridad, la Regresión Logística resulta más conveniente por su menor tasa de falsos negativos, aunque a costa de algunos falsos positivos adicionales. Para entornos de usuarios finales, Naive Bayes es preferible.\n",
+    "\n",
+    "3. El análisis de métricas complementarias como precisión, recall, y AUC permite una evaluación más completa que simplemente observar la exactitud.\n",
+    "\n",
+    "4. La importancia del preprocesamiento (como la normalización para Regresión Logística) fue clave para mejorar los resultados.\n",
+    "\n",
+    "5. Se evidenció que ningún modelo es perfecto, pero según el problema de negocio, minimizar falsos negativos es crítico, lo cual guía la elección del modelo.\n"
    ]
   }
  ],
