Corregir conclusión final

--- a/TP3/tp3.ipynb
+++ b/TP3/tp3.ipynb
@@ -3225,10 +3225,7 @@
    "id": "f43f1aab",
    "metadata": {},
    "source": [
-    "#### Conclusiones de los gráficos: Top 10 características más asociadas a SPAM\n",
-    "\n",
-    "Ambos modelos coinciden en varias palabras clave (`000`, `free`, `credit`, `remove`, entre otras), lo cual refuerza su relevancia. Sin embargo, difieren en cómo ponderan estas señales:\n",
-    "\n",
+    "#### Conclusiones de los gráficos:\n",
     "\n",
     "##### Regresión Logística\n",
     "\n",
@@ -3243,7 +3240,7 @@
     "- Asigna mayor diferencia de probabilidad a un conjunto de palabras algo más amplio y diverso (`money`, `font`, `addresses`).\n",
     "\n",
     "\n",
-    "Ambos modelos coinciden en varias palabras clave (`000`, `free`, `credit`, `remove`, entre otras), lo cual refuerza su relevancia. Sin embargo, difieren en cómo ponderan estas señales:\n",
+    "En resumen, ambos modelos coinciden en varias palabras clave (`000`, `free`, `credit`, `remove`, entre otras), lo cual refuerza su relevancia. Sin embargo, difieren en cómo ponderan estas señales:\n",
     "\n",
     "- **Regresión Logística** se enfoca en unas pocas características con fuerte impacto positivo sobre la probabilidad de SPAM.\n",
     "- **Naive Bayes**, en cambio, distribuye más el peso entre varias features que muestran una diferencia clara en frecuencia entre correos SPAM y NO SPAM."
@@ -3252,9 +3249,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (TP1 Hanoi)",
+   "display_name": "Python (TP2 California Housing)",
    "language": "python",
-   "name": "tp1-hanoi"
+   "name": "tp2-californiahousing"
   },
   "language_info": {
    "codemirror_mode": {
